--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,5 @@
 include AUTHORS COPYING README
 include MANIFEST.in
 include ChangeLog
-include kugou
-include kugou.desktop
-include kugou.png
+include kugou.png kugou.desktop
+recursive-include kugou/ *
